--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ on:
   push:
     branches:
       - main
-# 111
+
 jobs:
   deploy-gh-pages:
     runs-on: ubuntu-latest
@@ -36,6 +36,6 @@ jobs:
         with:
           github_token: ${{ secrets.ACCESS_TOKEN }}
           PUBLISH_REPOSITORY: imnxg/imnxg.github.io
-          publish_branch: resume
+          BRANCH: resume
           publish_dir: ./build
           commit_message: auto deploy
